# minderaGraduateProgram

./: CMakeLists.txt  README.md  adjCells.cpp
include/: adjCells.hpp  opencvSolver.hpp  recursiveExploration.hpp  utility.hpp
solvers/: opencvSolver.cpp  recursiveExploration.cpp
src/: CMakeLists.txt  adjCells.cpp  utility.cpp
src/solvers/: opencvSolver.cpp  recursiveExploration.cpp
test/: CMakeLists.txt  a.out  tests.cpp
test/testMatrixes/: small.json
